// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CSS CST Visitor > visits every visitor method > Calc 1`] = `
Root {
  "_options": undefined,
  "data": Map {
    "value" => [
      Ruleset {
        "_options": undefined,
        "data": Map {
          "selector" => SelectorSequence {
            "_options": undefined,
            "data": Map {
              "value" => [
                BasicSelector {
                  "_options": undefined,
                  "data": Map {
                    "value" => "a",
                  },
                  "location": [
                    0,
                    1,
                    1,
                    0,
                    1,
                    1,
                  ],
                  "post": 0,
                  "pre": 0,
                  "visible": true,
                },
              ],
            },
            "location": [
              0,
              1,
              1,
              0,
              1,
              1,
            ],
            "post": 1,
            "pre": 0,
            "visible": true,
          },
          "rules" => Rules {
            "_options": undefined,
            "data": Map {
              "value" => [
                Declaration {
                  "_options": {
                    "assign": ":",
                  },
                  "data": Map {
                    "name" => General {
                      "_options": {
                        "type": "Name",
                      },
                      "data": Map {
                        "value" => "b",
                      },
                      "location": [
                        4,
                        1,
                        5,
                        4,
                        1,
                        5,
                      ],
                      "post": 0,
                      "pre": 0,
                      "visible": true,
                    },
                    "value" => Call {
                      "_options": undefined,
                      "data": Map {
                        "name" => "calc",
                        "args" => List {
                          "_options": undefined,
                          "data": Map {
                            "value" => [
                              Operation {
                                "_options": {
                                  "inCalc": true,
                                },
                                "data": Map {
                                  "value" => [
                                    Dimension {
                                      "_options": undefined,
                                      "data": Map {
                                        "value" => [
                                          1,
                                        ],
                                      },
                                      "location": [
                                        12,
                                        1,
                                        13,
                                        12,
                                        1,
                                        13,
                                      ],
                                      "post": 1,
                                      "pre": 0,
                                      "visible": true,
                                    },
                                    "+",
                                    Dimension {
                                      "_options": undefined,
                                      "data": Map {
                                        "value" => [
                                          1,
                                        ],
                                      },
                                      "location": [
                                        16,
                                        1,
                                        17,
                                        16,
                                        1,
                                        17,
                                      ],
                                      "post": 0,
                                      "pre": 1,
                                      "visible": true,
                                    },
                                  ],
                                },
                                "location": [
                                  12,
                                  1,
                                  13,
                                  16,
                                  1,
                                  17,
                                ],
                                "post": 0,
                                "pre": 0,
                                "visible": true,
                              },
                            ],
                          },
                          "evaluated": undefined,
                          "location": [
                            12,
                            1,
                            13,
                            16,
                            1,
                            17,
                          ],
                          "post": 0,
                          "pre": 0,
                          "visible": true,
                        },
                      },
                      "location": [
                        7,
                        1,
                        8,
                        17,
                        1,
                        18,
                      ],
                      "post": 1,
                      "pre": 1,
                      "visible": true,
                    },
                    "important" => undefined,
                  },
                  "location": [
                    4,
                    1,
                    5,
                    17,
                    1,
                    18,
                  ],
                  "post": 0,
                  "pre": 1,
                  "visible": true,
                },
              ],
            },
            "location": [
              4,
              1,
              5,
              17,
              1,
              18,
            ],
            "post": 0,
            "pre": 0,
            "visible": true,
          },
        },
        "location": [
          0,
          1,
          1,
          19,
          1,
          20,
        ],
        "post": 0,
        "pre": 0,
        "visible": true,
      },
    ],
  },
  "location": [
    0,
    1,
    1,
    19,
    1,
    20,
  ],
  "post": 0,
  "pre": 0,
  "visible": true,
}
`;

exports[`CSS CST Visitor > visits every visitor method > Qualified Rule 1`] = `
Root {
  "_options": undefined,
  "data": Map {
    "value" => [
      Ruleset {
        "_options": undefined,
        "data": Map {
          "selector" => SelectorSequence {
            "_options": undefined,
            "data": Map {
              "value" => [
                BasicSelector {
                  "_options": undefined,
                  "data": Map {
                    "value" => "a",
                  },
                  "location": [
                    0,
                    1,
                    1,
                    0,
                    1,
                    1,
                  ],
                  "post": 0,
                  "pre": 0,
                  "visible": true,
                },
              ],
            },
            "location": [
              0,
              1,
              1,
              0,
              1,
              1,
            ],
            "post": 1,
            "pre": 0,
            "visible": true,
          },
          "rules" => Rules {
            "_options": undefined,
            "data": Map {
              "value" => [
                Declaration {
                  "_options": {
                    "assign": ":",
                    "semi": true,
                  },
                  "data": Map {
                    "name" => General {
                      "_options": {
                        "type": "Name",
                      },
                      "data": Map {
                        "value" => "color",
                      },
                      "location": [
                        4,
                        1,
                        5,
                        8,
                        1,
                        9,
                      ],
                      "post": 0,
                      "pre": 0,
                      "visible": true,
                    },
                    "value" => General {
                      "_options": {
                        "type": "Keyword",
                      },
                      "data": Map {
                        "value" => "red",
                      },
                      "location": [
                        11,
                        1,
                        12,
                        13,
                        1,
                        14,
                      ],
                      "post": 0,
                      "pre": 1,
                      "visible": true,
                    },
                    "important" => undefined,
                  },
                  "location": [
                    4,
                    1,
                    5,
                    13,
                    1,
                    14,
                  ],
                  "post": 0,
                  "pre": 1,
                  "visible": true,
                },
              ],
            },
            "location": [
              4,
              1,
              5,
              13,
              1,
              14,
            ],
            "post": 1,
            "pre": 0,
            "visible": true,
          },
        },
        "location": [
          0,
          1,
          1,
          16,
          1,
          17,
        ],
        "post": 0,
        "pre": 0,
        "visible": true,
      },
    ],
  },
  "location": [
    0,
    1,
    1,
    16,
    1,
    17,
  ],
  "post": 0,
  "pre": 0,
  "visible": true,
}
`;
